Fix layout bugs.

--- a/ngrinder-controller/src/main/webapp/css/ngrinder.css
+++ b/ngrinder-controller/src/main/webapp/css/ngrinder.css
@@ -145,7 +145,6 @@ table.ellipsis td.ellipsis {
 
 .container .well {
 	padding:10px;
-	margin-top: 40px
 }
 
 .container .search-bar {
